# google-research

./: #sudo su && README.md  .Ai monitor. True AI  .bazelrc  .fdignore  .gitignore  .travis.yml  AI. monitor. true Ai.  Ai. Monitor. True AI  Ai. Monitor. True Ai.  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DariosDaHippe  INTEGRATION_GUIDE.md  Noraplacin  README.md  README_KR.md  Readme.md  S5-Proposition.py  WORKSPACE  ally the Ai  ally the orginazer  compile_protos.sh  dsf  google  google_microsoft: '' brenche.bits  wenstei.yml  приемущества
brush_splat/: Cargo.toml  README.md  deny.toml
cann/file/: BUILD.bazel  file.cc  file.h
contrack/: BUILD.bazel  README.md  WORKSPACE.bazel  bert_client.py  configure.py  convert_character_mining_data.py  convert_to_jsonlines.py  custom_ops.cc  custom_ops.py  data.py  encoding.py  env.py  model.py  predict.py  preprocess.py  requirements.txt  signals.py  train.py  word2vec_client.py
contrack/data/: example_config.json  example_conversations.txt  female_names.txt  male_names.txt
cube_unfoldings/: CMakeLists.txt  README.md  compile.sh  compute.sh  nauty_wrapper.cc  nauty_wrapper.h  nauty_wrapper_test.cc  perfect_matchings.cc  perfect_matchings.h  perfect_matchings_test.cc  run.sh  test.sh  unfoldings.cc  unfoldings.h  unfoldings_main.cc  unfoldings_test.cc
cubert/: BUILD.bazel  README.md  code_to_subtokenized_sentences.py  code_to_subtokenized_sentences_main.py  code_to_subtokenized_sentences_test.py  cubert_tokenizer.py  extended_javalang_tokenizer.py  finetune_varmisuse_pointer_lib.py  java_tokenizer.py  java_tokenizer_test.py  python_tokenizer.py  python_tokenizer_test.py  requirements.txt  run_classifier.py  source_code.java.test  source_code.py.test  subtokenized_source_code.json  tokenizer_registry.py  unified_tokenizer.py  unified_tokenizer_test.py
drjax/: README.md  pyproject.toml  requirements.txt  run_tests.sh
drjax/tutorials/: Introduction_to_DrJAX.ipynb
elo_rater_model/: CMakeLists.txt  README.md  compile.sh  elo.cc  elo.h  elo_fast_math.cc  elo_fast_math.h  elo_main.cc  elo_test.cc  run.sh
explainable_routing/: CMakeLists.txt  README.md  draw_as_plotly.py  explainable_routing_scenarios_main.cc  file_util.cc  file_util.h  formulation.h  generate_random_queries.py  get_exp_subgraph_fracs.py  graph.cc  graph.h  link_cut_tree.cc  link_cut_tree.h  neg_weight_graph_search.cc  neg_weight_graph_search.h  path_store.cc  path_store.h  penalty_runner.cc  penalty_runner.h  plotly_path_string.cc  plotly_path_string.h  residual_problem.cc  residual_problem.h  tsv_utils.cc  tsv_utils.h
factoring_sqif/: README.md  dependencies.yaml  pyproject.toml  requirements.txt
factoring_sqif/factoring_sqif/: closest_vector_problem.py  fpylll_helpers.py  hamiltonian.py  hamiltonian_test.py  main.py  number_theory.py  number_theory_test.py  qaoa.py  schnorr.py
fax/: README.md  pyproject.toml  requirements.txt  run_tests.sh
fax/tutorials/: Introduction_to_FAX.ipynb
finance_harness/: .gitignore  Makefile  README.md  main.py  pyproject.toml  run.sh
finance_harness/FinanceGym/: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
finance_harness/configs/: providers.json  runtime.json
finance_harness/financeharness/: __init__.py  clarify.py  cli.py  research.py
jax_effects/: README.md  __init__.py  pyproject.toml
jax_effects/_src/: api.py  api_experimental.py  choix.py  core.py  handler.py  handlers.py  logging_utils.py
jax_effects/examples/: examples_test.py  examples_testdata.py  interleaved_effects.py  linear_regression.py  parameterized_handler.py  parameterized_returning_handler.py  qlearning.py  returning_handler.py  simple_loss.py  while_loop.py
large_scale_voting/: BUILD.bazel  README.md  WORKSPACE  concurrency.h  create_table_2.sh  create_table_3.sh  data.tar.xz  general_voter.h  general_voter_2d_lines_main.cc  general_voter_6dof.cc  general_voter_6dof.h  general_voter_6dof_main.cc  intersection_tools.h  median.sh  random_data_6dof.sh  status_macros.h
npy_array/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  array.BUILD
npy_array/npy_array/: npy_array.cc  (+1 more)
perso_arabic_norm/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  analyze_ngram_metrics.py  analyze_nmt_metrics.py  describe_splits.py  ngram_run_all.sh  ngram_train_and_eval.py  normalize_text.py  plot_entropy.py  requirements.txt  stat_utils.py  utils.py  wiki_dump_to_text.py
probe_routing/: CMakeLists.txt  README.md  extract_traffic_results.py  file_util.cc  file_util.h  generate_random_queries.py  graph.cc  graph.h  graph_search.cc  graph_search.h  graph_utils.cc  graph_utils.h  graph_with_highway_traffic.py  graph_with_traffic.py  random_weights_main.cc  random_weights_utils.cc  random_weights_utils.h  tsv_utils.cc  washington_results.txt
scann/: BUILD.bazel  MANIFEST.in  MODULE.bazel  README.md  WORKSPACE  configure.py  pyproject.toml  requirements.txt  setup.py
screen2words/: OWNDERS  README.md  create_tf_example_fn.py  create_tf_example_main.py  pyproject.toml  screen2words_eval.py  screen2words_experiment_config.py  screen2words_keras_input.py  screen2words_keras_model.py  setup.py
seeds/: README.md  SEEDS_Demo.ipynb  SEED_Demo.ipynb  pyproject.toml
sequential_attention/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run.sh
sgk/: CMakeLists.txt  Dockerfile  README.md  driver.py
sketching/: BUILD.bazel  README.md  WORKSPACE  benchmark_utils.cc  benchmark_utils.h  countmin.cc  countmin.h  countmin_test.cc  frequent.cc  frequent.h  frequent_benchmark.cc  frequent_test.cc  lossy_count.cc  lossy_count.h  lossy_count_benchmark.cc  lossy_weight.cc  lossy_weight.h  lossy_weight_benchmark.cc  lossy_weight_test.cc  run_sketches.cc  sketch.h  utils.cc  utils.h
sliding_window_clustering/: BUILD.bazel  README.md  WORKSPACE  base.cc  base.h  estimate_optimum_range.cc  estimate_optimum_range.h  io.cc  io.h  meyerson_algorithm.h  sliding_window_clustering_main.cc  sliding_window_framework.cc  sliding_window_framework.h
smerf/: README.md  pyproject.toml
sparse_deferred/: README.md  __init__.py  pyproject.toml
(+22202 files in other folders)
