[project]
name = "factoring_sqif"
authors = [
    {name = "Tanuj Khattar", email = "tanujkhattar@google.com"},
    {name = "Nour Yosri", email="noureldinyosri@google.com"},
]
description = "Implementation of sublinear quantum integer factorization algorithm."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
order_by_type = false
line_length = 100
remove_redundant_aliases = true