[project]
name = "financeharness"
version = "0.0.1"
description = "FinanceHarness: Automating Financial Deep Research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "CC-BY-NC-4.0" }
dependencies = [
    "openai>=1.40",
    "google-genai>=2.10",
    "pydantic>=2.7",
    "httpx>=0.27",
    "ddgs>=9.14.4",
    "trafilatura>=2.1.0",
    "pdfplumber>=0.11.10",
    "yfinance>=1.4.1",
    "pyyaml>=6.0.3",
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
# Installed CLI. Also runnable directly from a source checkout via `python main.py`.
financeharness = "financeharness.cli:main"
fh = "financeharness.cli:main"  # short alias

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financeharness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
