[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "jax_effects"
description = "Effect Handlers and Choice-Based Learning in JAX"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "jax-effects Authors", email="danielzheng@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project.
# Installed locally via `pip install -e .`
dependencies = [
    "absl-py",
    "colorama",
    "jax",
    "jaxlib",
    "numpy",
    "rich",
]

# `version` is automatically set by flit to use `jax_effects.__version__`.
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/google-research/tree/main/jax_effects"
repository = "https://github.com/google-research/google-research/tree/main/jax_effects"

[project.optional-dependencies]
# Installed via `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specifies which backend is used to build/install the project.
# All backends are supported by `pip install`.
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
exclude = [
  # Do not release test files on PyPI.
  "**/*_test.py",
]
