cc_library(
    name = "npy_array",
    srcs = ["npy_array/npy_array.cc"],
    hdrs = ["npy_array/npy_array.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dsharlet_array//:array",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "npy_array_test",
    srcs = ["tests/npy_array_test.cc"],
    deps = [
        ":npy_array",
        "@com_github_dsharlet_array//:array",
        "@gtest//:gtest_main",
    ],
)
