load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/dsharlet/array
http_archive(
    name = "com_github_dsharlet_array",
    sha256 = "e2ce5b2271734e0de85a51750bd85a9121bb5a7a6a5881f6b6a0c2f0d366057c",
    strip_prefix = "array-4b684ec1047a63f30d6e2b919b9abefda1496386",
    urls = [
        "https://github.com/dsharlet/array/archive/4b684ec1047a63f30d6e2b919b9abefda1496386.zip",
    ],
)

# abseil-cpp depends on bazel_skylib.
http_archive(
    name = "bazel_skylib",
    sha256 = "b8a1527901774180afc798aeb28c4634bdccf19c4d98e7bdd1ce79d1fe9aaad7",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
    ],
)

http_archive(
    name = "com_google_absl",
    sha256 = "497ebdc3a4885d9209b9bd416e8c3f71e7a1fb8af249f6c2a80b7cbeefcd7e21",
    strip_prefix = "abseil-cpp-20230802.1",
    urls = [
        "https://github.com/abseil/abseil-cpp/archive/abseil-cpp-20230802.1.zip",
    ],
)

# gtest.
http_archive(
    name = "com_github_google_googletest",
    sha256 = "1f357c27ca988c3f7c6b4bf68a9395005ac6761f034046e9dde0896e3aba00e4",
    strip_prefix = "googletest-1.14.0",
    urls = [
        "https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip",
    ],
)
