# Buildable components for Perso-Arabic experiments.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

load("@all_deps//:requirements.bzl", "requirement")

py_library(
    name = "utils",
    srcs = ["utils.py"],
    srcs_version = "PY3",
    deps = [
        requirement("numpy"),
        requirement("pandas"),
    ],
)

py_binary(
    name = "normalize_text",
    srcs = ["normalize_text.py"],
    data = ["@com_google_nisaba//nisaba/scripts/abjad_alphabet:reading_norm"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":utils",
        "@org_opengrm_pynini//pynini",
        requirement("absl-py"),
    ],
)
