package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

sh_binary(
    name = "build_pip_pkg",
    srcs = ["build_deps/build_pip_pkg.sh"],
    data = [
        "README.md",
        "pyproject.toml",
        "//scann/data_format:features_py_pb2",
        "//scann/partitioning:partitioner_py_pb2",
        "//scann/proto:centers_py_pb2",
        "//scann/proto:hash_py_pb2",
        "//scann/proto:scann_py_pb2",
        "//scann/scann_ops/py:scann",
    ],
    tags = ["notap"],
)
