bazel_dep(name = "rules_python", version = "1.5.1")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "protobuf", version = "28.3", repo_name = "com_google_protobuf")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1", repo_name = "com_google_absl")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "highway", version = "1.3.0", repo_name = "com_google_highway")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
single_version_override(module_name = "protobuf", version="28.3")
# -- bazel_dep definitions -- #

tf_configure = use_repo_rule("//build_deps/tf_dependency:tf_configure.bzl", "tf_configure")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
local_runtime_repo = use_repo_rule(
    "@rules_python//python/local_toolchains:repos.bzl",
    "local_runtime_repo",
)
local_runtime_toolchains_repo = use_repo_rule(
    "@rules_python//python/local_toolchains:repos.bzl",
    "local_runtime_toolchains_repo",
)
# -- use_repo_rule statements -- #

local_runtime_repo(
    name = "local_config_python",
    interpreter_path = "python",
    on_failure = "fail",
)
local_runtime_toolchains_repo(
    name = "local_toolchains",
    runtimes = ["local_config_python"],
)
register_toolchains("@local_toolchains//:all")

tf_configure(
  name = "local_config_tf",
)

git_repository(
  name = "cnpy",
  remote = "https://github.com/sammymax/cnpy.git",
  commit = "57184ee0db37cac383fc29175950747a46a8b512",
)
# -- repo definitions -- #
