[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "screen2words"
version = "0.0.1"
authors = [
    { name = "Bryan Wang", email = "bryanw@dgp.toronto.edu" },
]
description = "Screen to Words ML Model"
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "absl",
    "numpy",
    "apache_beam[gcp]>=2.52.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "keras>=2.13.0",
    "tensorflow>=2.13.0",
    "tensorflow-text>=2.13.0", # Need to compile from source on Windows, see https://github.com/tensorflow/text#a-note-about-different-operating-system-packages
    "tf-models-official>=2.13.0",
    "tensorflow-metadata>=1.13.1",
    #"protobuf<4.20.0",
    ## On Windows only
    # "cython<3.0.0",
    # "pyyaml==5.4.1", # pip install pyyaml==5.4.1 --no-build-isolation
]

[project.urls]
"Homepage" = "https://github.com/Gustl22/google-research/tree/dev/screen2words"
"Bug Tracker" = "https://github.com/google-research/google-research/issues"
