[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "seeds"
description = "Code and demo colab associated with the SEEDS paper (https://arxiv.org/abs/2306.14066)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Lizao (Larry) Li", email="lizaoli@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
version = "2023.12.12"
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
  "cartopy",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "tensorflow",
  "xarray",
  "zarr",
]

[project.urls]
homepage = "https://github.com/google-research/seeds"
repository = "https://github.com/google-research/seeds"
changelog = "https://github.com/google-research/my_project/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
