[project]
name = "sequential_attention"
description = "Sequential Attention for Feature Selection."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "sequential_attention authors", email="sequential_attention@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
  "tensorflow>=2.0",
  "numpy",
  "pandas",
  "pillow",
  "scikit-learn",
  "xlrd>=1.0.0",
]

# This is set automatically by flit using `sequential_attention.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/sequential_attention"
repository = "https://github.com/google-research/sequential_attention"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
